--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,8 @@
         "tuple": "c",
         "type_traits": "c",
         "utility": "c",
-        "interrupt.h": "c"
+        "interrupt.h": "c",
+        "thread.h": "c",
+        "thread": "c"
     }
 }
