rox and bad read

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "interrupt.h": "c",
-        "filesys.h": "c"
+        "filesys.h": "c",
+        "list.h": "c"
     }
 }
