--- a/src/Makefile.build
+++ b/src/Makefile.build
@@ -63,8 +63,9 @@ userprog_SRC += userprog/tss.c		# TSS management.
 
 # No virtual memory code yet.
 #vm_SRC = vm/file.c			# Some file.
-vm_SRC = vm/frame.c			# Frame table file.
+vm_SRC += vm/frame.c		# Frame table file.
 vm_SRC += vm/page.c			# Frame table file.
+vm_SRC += vm/swap.c 		# Swap file.
 
 
 
